--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <header>
-      <img class="header__logo" src="./icons/logo_welbex.svg" alt="Логотип компании" />
+      <div class="header__logo">
+        <img src="./icons/logo_welbex.svg" alt="Логотип компании" />
+        <span class="header__logo_description">крупный интегратор CRM в Росcии и ещё 8 странах</span>
+      </div>
       <menu>
         <a>Услуги</a>
         <a>Виджеты</a>
@@ -23,7 +26,6 @@
         <a><img src="./icons/viber.svg" alt="Написать в viber" /></a>
         <a><img src="./icons/whats_up.svg" alt="Написать в what's up" /></a>
       </div>
-      <span class="header__logo_description">крупный интегратор CRM в Росcии и ещё 8 странах</span>
     </header>
     <div class="sphere-brown"></div>
     <main>
